--- a/public/404.html
+++ b/public/404.html
@@ -59,7 +59,7 @@
 
     <p>the page you are looking for not avaible!</p>
 
-    <a href="www.atelier-la-ronde-de-nuit.com" class="link_404">Go to Home</a>
+    <a href="https://www.atelier-la-ronde-de-nuit.com" class="link_404">Retour à l'accueil</a>
   </div>
     </div>
     </div>
